--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
      font-size: 19;">Copy</button>
   </div>
 </div> <hr>
-<div class="div1"></div>
+<div class="div1 col-sm"></div>
 
 <div class="card text-center" style="background-color: rgb(137, 196, 142); height: 80;">
     <div class="card-body">
@@ -443,7 +443,7 @@
     </div>
   </div>
 
-<div class="div2"></div><br><hr>
+<div class="div2 col-sm"></div><br><hr>
 
 <div class="card text-center" style="background-color: rgb(137, 196, 142); height: 80;">
     <div class="card-body">
